--- a/todo-backend/pom.xml
+++ b/todo-backend/pom.xml
@@ -6,6 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.5.6</version>
+        <packaging>war</packaging>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.klef.todo</groupId>
@@ -58,6 +59,7 @@
     </dependencies>
 
     <build>
+    <finalName>springboottodoapi</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
