--- a/todo-backend/pom.xml
+++ b/todo-backend/pom.xml
@@ -6,7 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.5.6</version>
-        <packaging>war</packaging>
+        
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.klef.todo</groupId>
@@ -14,6 +14,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>todo-backend</name>
     <description>todo-backend</description>
+    <packaging>war</packaging>
     <url/>
     <licenses>
         <license/>
@@ -59,7 +60,7 @@
     </dependencies>
 
     <build>
-    <finalName>springboottodoapi</finalName>
+    <finalName>pringboottodoapi</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
