--- a/todo-backend/pom.xml
+++ b/todo-backend/pom.xml
@@ -60,7 +60,7 @@
     </dependencies>
 
     <build>
-    <finalName>pringboottodoapi</finalName>
+    <finalName>springboottodoapi</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
